# P4_classifier_informations

./: Pres_Projet4.pptx  README.md  pyproject.toml
