[project]
name = "projet4-fatima-zahra-romane"
version = "0.1.0"
description = "Projet 4 : identifiez les causes d'attrition au sein de l'ESN TECHNOVA PARTNERS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter",
    "notebook",
    "ipykernel",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "scipy",
    "statsmodels",
    "shap"]
